  notofication options
- changed the default for 'isLogoffGuestAfterOrder' from true to false
- do no use page cache for POST requests
- if 'isLogoffGuestAfterOrder' is set to true, logout user only *after* the
  checkout success page is shown (that means isGuest() will still return true
	in checkout_success.php)
- changed default for 'isLogoffGuestAfterOrder' from true to false

Release 0.9.0
- move cache manager page from core to zm_page_cache plugin
- added ZMShoppingCartItem::getProduct()
- make zm_catalog_tree support displaying products
- use create(..) rather than new to create new ResultList instances
- add custom result list for products to allow to replace with custom class;
  this will make the zm_split_page_result_list plugin a lot easier and allow
  to use the same code also in the admin area
- move admin zm_category_tree function into core/admin/html.php rather than
  sitting in a zen-cart folder; requires deleting the file manually
- properly populate a products status (changed to boolean)
- add parameter to allow to query all products (ignoring the status)
- make zm_href() and zm_secure_href() work in admin pages
- add simple zm_product_resultlist() admin function for plugins to use
- rename ZMPlugin::getOrder() to ZMPlugin::getSortOrder() and add setter
- optimize themeId lookup
- add support to set the selected (zen-cart) theme id
- add (default) option in theme builder to automatically create dummy files
  and select a newly created theme
- added new setting 'invalidSessionPage' (default is FILENAME_COOKIE_USAGE)
- fixed bug to show a session/cookie required page if neccessary; #1836136
- moved tax rate from ZMShippingProvider to ZMShippingMethod
- add method to ZMShippingProviders that allows to calculate shipping for a
  given address
- added a static page editor that supports editing static (define) pages in
  the theme's language directories; this will show up only if 'isZMDefinePages'
	is set to true
- fix ZMCategory::getImageInfo()