@@ -97,6 +97,9 @@ Release 0.9.1
   checkout success page is shown (that means isGuest() will still return true
 	in checkout_success.php)
 - changed default for 'isLogoffGuestAfterOrder' from true to false
+- removed settings isShowEZHeaderNav, isShowEZBoxesNav, isShowEZFooterNav
+- removed setting isShowCrumbtrail
+- removed settings isEnableLeftColumn and isEnableRightColumn
 
 Release 0.9.0
 - move cache manager page from core to zm_page_cache plugin
